# tusa-chat

tusa7/: .gitignore  .hgignore  CMakeLists.txt  LICENSE  README.md
tusa7/bot/: CMakeLists.txt  start
tusa7/bot/bot-girl/: CMakeLists.txt  bot.dump  cmd.cpp  cmd.h  girl.h
tusa7/bot/bot-mafia-new/: CMakeLists.txt  bot.conf  day.cpp  game.h  mafia.cpp  mafia.h  messages.cpp  messages.h  night.h
tusa7/bot/bot-mat/: CMakeLists.txt  bot.conf  cmds.h  mat.h
tusa7/bot/bot-mat/conf/: bot.conf.man
tusa7/bot/bot-quiz-oscar/: CMakeLists.txt  bot.conf  quiz.h
tusa7/bot/bot-roulette/: CMakeLists.txt  game.cpp  roulette.cpp
tusa7/bot/bot-shared/: CMakeLists.txt  _QUERY.cpp  _QUERY.h  _mutex.cpp  antiflood.h  c_conn.cpp  c_conn.h  config.cpp  m_var.h  mysql_extens.cpp  str_lib.h  utils.cpp  utils.h
tusa7/chat/: CMakeLists.txt
tusa7/chat/chatserver/: CMakeLists.txt  DR_types.h  admin.cpp  admin_ban.cpp  admin_logininfo.cpp  admin_other.cpp  app_con.h  app_server.cpp  app_server.h  channels.cpp  channels.h  chat_colors.h  chat_config.cpp  chat_funny.h  chat_globals.cpp  chat_msg.cpp  chat_process_web.cpp  chat_thread_2.cpp  chat_thread_event.h  chatserver.cpp  cm_container.h  contact_vec.cpp  contact_vec.h  file_dump.cpp  forum.cpp  forum.h  fotos.cpp  fotos_ui.cpp  ignore_vec.cpp  ignore_vec.h  irc_login.cpp  irc_server.cpp  irc_server.h  irc_session.h  irc_user.cpp  irc_user_cred.cpp  irc_utils.h  kk  levels.cpp  local_user_handle.cpp  (+30 more)
tusa7/chat/chatserver/conf/: BOS.conf  db.conf  host_aliases.conf  ip_ban.conf  ip_ban.conf.sample  ip_redirect.conf  irc_server.conf  levels.conf  motd  server.conf
tusa7/chat/chatserver/conf/colors/: 0std.conf  4pink.conf
tusa7/chat/chatserver/conf/conf_doc/: 1  30chatter.conf  replacement.conf
tusa7/chat/chatserver/conf/lev/: 100main_admin.conf  100main_bratva.conf  32nuclear.conf  41punk.conf  44macumba.conf  48gobbler.conf  (+6 more)
tusa7/chat/core/: CMakeLists.txt  DB_id.h  M_LIST.h  M_MAP.h  PTR.h  _QUERY.h  _mutex.h  _mutex1.cpp  _mutex1.h  core.cpp  core_main.cpp  db_config.cpp  db_id_type.h  db_maps.h  des_locl.h  des_sid.cpp  des_sid.h  errs.h  oscar_buffer.cpp  oscar_buffer.h  server_config.h  st_FILE.cpp  st_stream_str.cpp  st_stream_str.h  st_stuff.cpp  st_stuff.h  str_lib.cpp  str_lib.h  str_lib_extra.cpp  tcp_stats.h  wrappers.cpp  wrappers.h
tusa7/chat/core_web/: core_web.cpp  html_out.cpp  oscar_client.h  tcp_dialog_server.cpp  tcp_sender.h  tcp_server_connection.h  thread_info.cpp  web_adminfo.cpp  web_server.h  web_server_config.cpp  web_server_config.h  web_tools.cpp
tusa7/chatserver/: CH_id.h  RTYPES_CLAN.h  admin.h  admin_accounts.cpp  admin_settings.cpp  admin_userlist_command.cpp  admin_vote.cpp  app_con.cpp  app_def.h  chat_config.h  chat_def.h  chat_funny.cpp  config.cpp  cs_conn_data.cpp  cs_conn_data.h  do_ban.cpp  fotos_ui.h  irc_admin.cpp  irc_tools.cpp  klan_to_db_io.cpp  message.cpp  nick_vec.cpp  update_cmd.cpp  update_cmd.h  update_cmd.pl  url_admin_nickban.cpp  url_settings_credits.cpp  user_profile.cpp  user_stat.cpp  user_state.cpp  user_state.h  user_status.h  vote.h
tusa7/chatserver/conf/: _bos.conf  chat.conf  cs_client.conf  files.conf  messages.conf
tusa7/chatserver/conf/colors/: 2green.conf
tusa7/chatserver/conf/conf_doc/: std.conf
tusa7/chatserver/conf/lev/: 00guest.conf  10newuser.conf  21chajnik.conf  39telefonist.conf  40olduser.conf  70guard.conf  80spy.conf
tusa7/chatserver/conf/repl/: chatter.repl
tusa7/chatserver/www/files/: 500.html  a_user_info.html  change_info_n.html  header.html  header.html.2  histories.html  index.html.sneg  index_news_row.html  ip_denied.html  news.html  news_row.html  pager_logined.html  reg_email.html  register_n.html
tusa7/chatserver/www/html/: help.html
tusa7/chatserver/www/messages/: byes.0.msg  byes.1.msg  modechanges.1.msg
tusa7/chatserver/www/pics/: Thumbs.db  uinfo1.gif-old
tusa7/core/: M_DEQUE.h  PTR.cpp  _QUERY.cpp  __main.cpp  _mutex.cpp  copy_file.h  d_var.h  db_config.h  db_maps.cpp  errs.cpp  file_set.cpp  file_set_init.cpp  m_var.h  server_config.cpp  str_lib.h  tcp_stats.cpp  threadable.cpp
tusa7/core_web/: CMakeLists.txt  c_conn.cpp  c_conn.h  html_out.h  oscar_client.cpp  tcp_sender.cpp  thread_info_report.cpp  web_connection.cpp  web_connection.h  web_connection_ptcp.cpp  web_server.cpp  web_server_data.h  web_tools.h
tusa7/ra_chat/: Makefile  fdmake
(+1817 files in other folders)
