cmake_minimum_required (VERSION 2.6)


add_library(bot-shared  STATIC

_QUERY.cpp
_QUERY.h
_mutex.cpp
_mutex.h
antiflood.cpp
antiflood.h
c_conn.cpp
c_conn.h
config.cpp
config.h
errs.cpp
errs.h
m_var.h
misc.cpp
misc.h
mysql_extens.cpp
mysql_extens.h
st_stuff.cpp
st_stuff.h
str_lib.h
utils.cpp
utils.h



           )


